Config for build